# node

./: .coderabbit.yaml  .dockerignore  .gitignore  .golangci.yml  .goreleaser-zetaclient.yaml  .goreleaser-zetacore.yaml  .goreleaser.yaml  Dockerfile  Dockerfile-athens3-ubuntu  Dockerfile-localnet  Dockerfile-release  Dockerfile-upgrade  Dockerfile-versioned  Dockerfile-versioned-source  Dockerfile-zetaclientd  Dockerfile.mockmpi  Dockerfile.smoketest  Dockerfile.testnet  Dockerfile.zetaclient  Dockerfile.zetacore  Dockerfile.zetacore_binary  LICENSE  LOCAL_TESTING.md  Makefile  VERSIONS.md  appspec.yml  buildspec.yml  changelog.md  codecov.yml  config.yml  coverage.out  entrypoint.sh  go.mod  go.sum  group.sh  init.sh  localnet-copier.sh  localnet-reset.sh  package.json  proposal.json  (+16 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE_MAIN.md  labeler.yml  pull_request_template.md  release.yml
TODO/: package.json
app/: app.go  app_test.go  config.go  custom_proposal_handler.go  custom_proposal_handler_test.go  delegation_bug_test.go  encoding.go  export.go  init_genesis.go  modules.go  precompiles.go  prefix.go  setup_handler_test.go  setup_handlers.go  signer.go  sim_test.go  upgrade_tracker.go  upgrade_tracker_test.go  wasm_config.go
aws-scripts/: build.sh  start.sh  stop.sh  test.sh  validate.sh
cmd/: cmd.go  cmd_testnet.go  config.go  config_mainnet.go  config_mock_mainnet.go  config_privnet.go  config_testnet.go  cosmos.go  test-semgrep.go
common/: address.go  address_test.go  (+33 more)
cw_contracts/contract/: Cargo.toml  Makefile
cw_contracts/contract/src/: contract.rs
(+6374 files in other folders)
